[package]
name = "benchmark-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.31.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sql_params" # modify this to the benchmark wanted
harness = false
